--- a/styles/style.css
+++ b/styles/style.css
@@ -1,26 +1,33 @@
+/* gloval style start */
+.adress__link {
+  text-underline-position: under;
+}
+
+.nav__list_item_link_noActive {
+  text-decoration: none;
+}
+
+/* header start */
 .header {
   display: flex;
   justify-content: space-between;
-  padding: 90px 50px 100px 50px;
+  padding: 90px 50px 93px 50px;
   font-size: 18px;
   font-weight: 400;
 }
-.header_leftBlock {
+.header_main {
   display: flex;
   align-items: center;
   gap: 40px;
 }
-.nav_list {
+.nav__list {
   list-style-type: circle;
   display: flex;
   gap: 34px;
   line-height: 100%;
 }
-.nav_list_item:nth-child(1) {
+.nav__list_item:nth-child(1) {
   list-style-type: none;
-}
-.nav_list_item:nth-child(1) > a {
-  text-decoration: none;
 }
 .header_logoLink {
   display: block;
@@ -29,19 +36,23 @@
   max-width: 148px;
   max-height: 105px;
 }
-.header_rightBlock {
+
+.header__adress {
   display: flex;
   justify-content: center;
   flex-direction: column;
   max-width: 240px;
   line-height: 24.3px;
-  text-underline-position: under;
 }
+/* header end */
+
+/*cover start*/
 
 .cover {
-  padding: 160px 50px 50px 50px;
-  background-image: url("/images/cover.jpg");
+  padding: 166px 50px 50px 50px;
+  background-image: url('../images/cover.jpg');
   background-size: cover;
+  background-position: center;
   position: relative;
   margin-bottom: 180px;
 }
@@ -106,7 +117,8 @@
   font-size: 22px;
   font-weight: 500;
 }
-
+/* cover end */
+/* lots start */
 .lots {
   padding: 0 24px;
   margin-bottom: 100px;
@@ -120,38 +132,50 @@
 .lots_cards {
   display: flex;
   gap: 25px;
-  margin-bottom: 27px;
+  flex-wrap: wrap;
+  margin: 0 0 27px 0;
+  padding: 0;
+  list-style-type: none;
 }
 .lots_card {
   width: 334px;
-  height: 596px;
+  min-height: 596px;
+}
+.lots_card_link {
   display: flex;
   flex-direction: column;
   justify-content: space-between;
-  font-size: 20px;
-  font-weight: 400;
-  line-height: 120%;
   padding: 48px 40px 48px 40px;
   color: rgba(255, 255, 255, 1);
   position: relative;
+  height: 100%;
+  text-decoration: none;
 }
-.lots_card_title-link {
+.lots_card_title {
   text-transform: uppercase;
+  text-decoration: underline;
+  font-size: 22px;
+  font-weight: 700;
+  line-height: 120%;
 }
-.lots_card-one {
-  background-image: url("/images/card-lot-01.jpg");
+.card_text {
+  text-decoration: none;
+  font-size: 20px;
+  font-weight: 400;
+  line-height: 24px;
+}
+.lots_card-size-position {
   background-size: cover;
   background-position: center;
 }
-.lots_card-two {
-  background-image: url("/images/card-lot-02.jpg");
-  background-size: cover;
-  background-position: center;
+.lots_card-film {
+  background-image: url('../images/card-lot-01.jpg');
 }
-.lots_card-three {
-  background-image: url("/images/card-lot-03.jpg");
-  background-size: cover;
-  background-position: center;
+.lots_card-book {
+  background-image: url('../images/card-lot-02.jpg');
+}
+.lots_card-picture {
+  background-image: url('../images/card-lot-03.jpg');
 }
 .lots_card-index {
   z-index: 3;
@@ -162,12 +186,16 @@
   font-weight: 400;
 }
 
+/* lots end */
+
+/* about start */
+
 .about {
   display: flex;
   gap: 72px;
   padding-top: 55px;
   padding-left: 70px;
-  margin-bottom: 200px;
+  margin-bottom: 179px;
 }
 .about_leftBlock-background {
   width: 240px;
@@ -182,23 +210,29 @@
   width: 148px;
   height: 114px;
 }
-.about_rightBlock {
+.about_info {
   padding-top: 100px;
 }
-.about_rightBlock_title {
+.about_info_title {
   font-size: 40px;
   font-weight: 700;
   text-transform: uppercase;
   margin-bottom: 100px;
 }
-.about_rightBlock_text {
+.about_info_text {
   font-size: 20px;
   font-weight: 400;
   line-height: 24px;
+  max-width: 694px;
 }
-.about_rightBlock_text-margin {
+.about_info_text-margin {
   margin-bottom: 24px;
+  max-width: 688px;
 }
+
+/* about end */
+
+/* footer start */
 
 .footer {
   display: flex;
@@ -208,30 +242,31 @@
   font-size: 18px;
   font-weight: 400;
   line-height: 24.5px;
+  gap: 167px;
 }
 
 .footer_links_network {
   display: flex;
   gap: 48px;
+  list-style-type: none;
+  line-height: 122%;
 }
-.footer_links_network > a > img {
+.footer_links_network-img {
   height: 48px;
 }
-.footer_rightBlock {
+.footer_main {
   display: flex;
   flex-direction: column;
   max-width: 260px;
-  text-underline-position: under;
-
 }
 .footer_nav {
   display: flex;
   flex-direction: column;
+  padding-right: 17px;
 }
 .footer_nav-list {
   list-style-type: none;
   text-align: center;
 }
-.footer_nav-item:nth-child(1) > a {
-  text-decoration: none;
-}
+
+/* footer end */
